complete kanji progress api and repo
