# server/srv-dba/internal/models/kanji/progress.go
@@ -1,14 +1,16 @@
 package models
 
-import "time"
+import (
+	"database/sql"
+)
 
 type KanjiProgress struct {
-	ID         uint64    `db:"id"`
-	KanjiID    uint64    `db:"kanji_id"`
-	UserID     uint64    `db:"user_id"`
-	SRSLevel   uint32    `db:"srs_level"`
-	UnlockDate time.Time `db:"unlock_date"`
-	NextDate   time.Time `db:"next_date"`
-	BurnDate   time.Time `db:"burn_date"`
-	KanjiModel Kanji     `db:"-"`
+	ID         uint64       `db:"id"`
+	KanjiID    uint64       `db:"kanji_id"`
+	UserID     uint64       `db:"user_id"`
+	SRSLevel   uint32       `db:"srs_level"`
+	UnlockDate sql.NullTime `db:"unlock_date"`
+	NextDate   sql.NullTime `db:"next_date"`
+	BurnDate   sql.NullTime `db:"burn_date"`
+	KanjiModel Kanji        `db:"-"`
 }
